--- a/src/app/pages/feeds/home/postdetail/postdetail.page.html
+++ b/src/app/pages/feeds/home/postdetail/postdetail.page.html
@@ -127,6 +127,49 @@
 
 </ion-content>
 
+<!-- START NEW POST DETAIL HEADER -->
+<!-- <div class="container">
+  <ion-grid class="postDetail-grid" [class.darkPostGrid]="theme.darkMode">
+    <ion-row class="top-row">
+      <ion-col class="left-col" size="2.5">
+        <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+          <img src="/assets/images/default-contact.svg">
+          <div class="offline"></div>
+        </div>
+      </ion-col>
+      <ion-col class="mid-col" size="8" (press)="pressName()">
+        <ion-label>
+          Bird Feeds
+          <span>- Yesterday</span>
+        </ion-label>
+        <p>@BenjaminPiette</p>
+      </ion-col>
+      <ion-col class="right-col" size="1.5">
+        <img 
+          [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
+        >
+      </ion-col>
+    </ion-row>
+    <ion-row class="mid-row">
+      <ion-col>
+        <h2>
+          <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic odio quidem eum culpa officia amet alias consectetur ab, magni sapiente consequuntur fugit cupiditate doloribus repellendus.</pre>
+        </h2>
+      </ion-col>
+    </ion-row>
+    <ion-row class="bottom-row">
+      <ion-col size="2.25">
+        <img src='/assets/images/like.svg'>
+        <ion-label>12</ion-label>
+      </ion-col>
+      <ion-col>
+        <img src="/assets/images/bubble-line.svg">
+        <ion-label>4</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</div> -->
+
 
    <!--  <div class="image-text-layout-div" >
       <ion-card-content class="ion-no-padding ion-no-margin">
