--- a/src/app/pages/feeds/home/postdetail/postdetail.page.scss
+++ b/src/app/pages/feeds/home/postdetail/postdetail.page.scss
@@ -18,6 +18,124 @@
     }
 }
 
+.postDetail-grid {
+    border-bottom: 2px solid #f0f1ff;
+    padding: 20px;
+
+    ion-row {
+        width: 100%;
+    }
+    
+    .top-row {
+        .left-col, .right-col {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        }
+
+        .mid-col {     
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+
+        ion-label {
+            font-size: 15px;
+            font-weight: 700;
+            color: #000000;
+
+            span {
+                position: relative;
+                bottom: 1.5px;
+                font-size: 10px;
+                font-weight: 500;
+                color: #8888b0;
+            }
+        }
+
+        p {
+            margin: 0;
+            font-size: 12px;
+            font-weight: 600;
+            color: #8888b0;
+            }  
+        }
+
+        .right-col {
+        img {
+            width: 18.4px;
+            height: 4.4px;
+            overflow: visible;              
+        }
+        }
+
+        .mid-row {
+            ion-col {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+
+
+                h2 {
+                    margin: 0 !important;
+        
+                pre {
+                    margin: 0 !important;
+                    font-family: 'SourceSansPro' !important;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 1.25;
+                }
+
+                .post-img {
+                    width: 100%;
+                    height: 191px;
+                    object-fit: cover;
+                    border-radius: 11px;
+                }
+            }
+    
+            }
+
+            .bottom-row {
+            width: 100%;
+            margin-top: 10px;
+            padding: 0;
+    
+            ion-col {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+    
+                ion-label {
+                margin-left: 5px;
+                font-size: 10px;
+                font-weight: 600;
+                color: #a0a2c4;
+                }
+    
+                .liked {
+                color: rgb(209, 81, 81);
+                }
+    
+                .commented {
+                color: #007AFF;
+                }
+    
+                img {
+                width: 16px;
+                height: 14px;
+                overflow: visible;
+                }
+            }
+            }
+        }
+        }
+
+    }
+
+
 /* .darkContainer{
     .channel-detail-div .channel-detail-text-div .white{
         color: #ffffff;
