--- a/src/app/pages/feeds/search/search.page.scss
+++ b/src/app/pages/feeds/search/search.page.scss
@@ -1,9 +1,12 @@
 .empty-container {
-  margin-top: 130px;
-  justify-content: flex-start;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.addfeedssource{
+/* .addfeedssource{
   width: 236px;
   height: 41px;
   border-radius: 9px;
@@ -173,3 +176,4 @@ ion-searchbar {
   .black{
     color: #000000;
   }
+ */
