--- a/src/app/pages/feeds/profile/profile.page.html
+++ b/src/app/pages/feeds/profile/profile.page.html
@@ -23,12 +23,6 @@
       <h1>{{ name }}</h1>
       <p>{{ description }}</p>
     </div>
-      
-    <!-- <div class="center-flex" style="margin-top: 10px;">
-        <img class="profile-sub-img" src="assets/images/bubble2.svg">
-        <ion-label class="profile-sub-text">{{followers}} </ion-label>
-        <ion-label  class="profile-subscribe">{{'common.followers' | translate}}</ion-label>
-    </div> -->
 
     <div class="tab-container" [class.removeMargin]="selectType === 'ProfilePage.myLikes'">
       <div class="left-tab" [class.tab-active]="selectType === 'ProfilePage.myFeeds'" (click)="changeType('ProfilePage.myFeeds')">
@@ -42,39 +36,41 @@
       </div>
     </div>
   
-    <app-myfeeds *ngIf="selectType == 'ProfilePage.myFeeds'"  [channels] = "channels" [nodeStatus]="nodeStatus"></app-myfeeds>
-    <app-following *ngIf="selectType == 'ProfilePage.following'"  [followingList] = "followingList" [nodeStatus]="nodeStatus"></app-following>
-    <app-likes  *ngIf="selectType == 'ProfilePage.myLikes'" [likeList] = "likeList" [nodeStatus]="nodeStatus"></app-likes>
+    <app-myfeeds *ngIf="selectType === 'ProfilePage.myFeeds'" [channels] = "channels" [nodeStatus]="nodeStatus"></app-myfeeds>
+    <app-following *ngIf="selectType === 'ProfilePage.following'" [followingList] = "followingList" [nodeStatus]="nodeStatus"></app-following>
+    <app-likes  *ngIf="selectType === 'ProfilePage.myLikes'" [likeList] = "likeList" [nodeStatus]="nodeStatus"></app-likes>
    
     <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
       <ion-infinite-scroll-content
-        loadingSpinner="bubbles"
-        loadingText="{{'common.loadingText'|translate}}">
+        class="ion-padding-top"
+        loadingSpinner="crescent"
+      >
       </ion-infinite-scroll-content>
     </ion-infinite-scroll>
 
   </ion-grid>
 
-  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
-    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
-      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
-      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
-      <ion-ripple-effect></ion-ripple-effect>
-    </div>
-    <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
-      <div class="option">
-        <ion-icon mode="ios" name="share"></ion-icon>
-        <span>Share</span> 
-      </div>
-    </ion-col>
-    <ion-col size="3" class="middle-col">
-      <div class="divider"></div>
-    </ion-col>
-    <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
-      <div class="option">
-        <ion-icon mode="ios" name="trash"></ion-icon>
-        <span>Unfollow</span>
-      </div>
-    </ion-col>
-  </ion-row>
 </ion-content>
+
+<ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
+  <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
+    <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
+    <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
+    <ion-ripple-effect></ion-ripple-effect>
+  </div>
+  <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
+    <div class="option">
+      <ion-icon mode="ios" name="share"></ion-icon>
+      <span>Share</span> 
+    </div>
+  </ion-col>
+  <ion-col size="3" class="middle-col">
+    <div class="divider"></div>
+  </ion-col>
+  <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
+    <div class="option">
+      <ion-icon mode="ios" name="trash"></ion-icon>
+      <span>Unfollow</span>
+    </div>
+  </ion-col>
+</ion-row>
