--- a/src/app/pages/servers/server-info/server-info.html
+++ b/src/app/pages/servers/server-info/server-info.html
@@ -11,10 +11,10 @@
       <h1>{{ name }}</h1>
       <p *ngIf="introduction && introduction !== name">{{ introduction }}</p>
       <ion-row class="status-row" [class.online]="serverStatus === 0">
-       <!--  <div class="indicator"></div>
-        <span class="status" *ngIf="serverStatus === 0">{{ 'ServerInfoPage.online' | translate}}</span>
-        <span class="status" *ngIf="serverStatus === 1">{{ 'ServerInfoPage.offline' | translate}}</span> -->
-        <ion-img [src]="serverStatus === 0 ? 'assets/images/users-online.svg' : 'assets/images/users-offline.svg'" class="usersonline"></ion-img>
+        <div class="indicator"></div>
+<!--         <span class="status" *ngIf="serverStatus === 0">{{ 'ServerInfoPage.online' | translate }}</span>
+        <span class="status" *ngIf="serverStatus === 1">{{ 'ServerInfoPage.offline' | translate }}</span>  -->
+        <ion-img [src]="serverStatus === 0 ? 'assets/images/users-online.svg' : 'assets/images/users-offline.svg'"></ion-img>
         <span class="clientNumber">{{ clientNumber }}</span>
         <span class="users">{{'ServerInfoPage.users' | translate}}</span>
       </ion-row>
@@ -35,23 +35,22 @@
       </ion-row>
     </div>
 
-    <div style="margin-left: 34px; margin-right: 34px; margin-top: 25px;" *ngIf="address != ''">
-      <ion-button style="margin-top: 25px;" expand="block" mode="ios" (click)="addFeedSource()" [disabled]='buttonDisabled'>
+     <!--- BUTTONS --->
+    <ion-row *ngIf="address != ''" class="btn-row">
+      <ion-button (click)="addFeedSource()">
         <ion-label>{{'ServerInfoPage.addFeedSource' | translate}}</ion-label>
       </ion-button>
-    </div>
-  
-    <div style="margin-left: 34px; margin-right: 34px; margin-top: 25px;" *ngIf="address == '' && !isBindServer">
-      <ion-button style="margin-top: 25px;" expand="block" mode="ios"  color="danger" (click)="removeFeedSource()">
+    </ion-row>
+    <ion-row *ngIf="address == '' && !isBindServer" class="btn-row">
+      <ion-button (click)="removeFeedSource()" color="danger">
         <ion-label>{{'ServerInfoPage.removeFeedSource' | translate}}</ion-label>
       </ion-button>
-    </div>
-  
-    <div style="margin-left: 34px; margin-right: 34px; margin-top: 25px;" *ngIf="address == '' && isBindServer">
-      <ion-button style="margin-top: 25px;" expand="block" mode="ios"  color="danger" (click)="deleteFeedSource()">
+    </ion-row>
+    <ion-row *ngIf="address == '' && isBindServer" class="btn-row">
+      <ion-button (click)="deleteFeedSource()" color="danger">
         <ion-label>{{'ServerInfoPage.deleteFeedSource' | translate}}</ion-label>
       </ion-button>
-    </div> 
+    </ion-row>
 
   </ion-grid>
 </ion-content>
